@@ -1,3 +1,7 @@
+2007-04-07  Ulrich Drepper  <drepper@redhat.com>
+
+	* posix/sys/wait.h: Remove unnecessary forward declaration.
+
 2007-04-05  Jakub Jelinek  <jakub@redhat.com>
 
 	* nis/nis_call.c (__nisfind_server): Replace (*dir)->do_servers
